
#Configure to harrier module

AC_INIT([harrier],[1.0],[bug-reports@ridgerun.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_CHECK_HEADERS([src/harrier_common_defs.h src/harrier_config_common_defs.h])
AC_OUTPUT
